Tweak styling of git revision in footer

--- a/hsreplaynet/static/web/base.css
+++ b/hsreplaynet/static/web/base.css
@@ -102,6 +102,10 @@ header nav h1 {
 	color: #aaa;
 }
 
+.site-footer abbr[title] {
+	border-bottom: none;
+}
+
 /* Generic pages (eg. account, flatpages) */
 
 .page {
