--- a/hsreplaynet/static/web/home.css
+++ b/hsreplaynet/static/web/home.css
@@ -174,3 +174,20 @@ ul.home-steps .promo-button {
 #promo .promo-hint {
 	color: #ddd;
 }
+
+#joust-lightbox {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 999;
+}
+
+#joust-promo-container {
+	width: 80%;
+	height: 80%;
+	margin: 5% auto;
+}
