Simplify default replay name

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -20,7 +20,7 @@
 <div id="tabletop" class="container-fluid">
 	<div class="row">
 		<div class="col-lg-offset-1 col-lg-10 col-xs-12">
-			<h1>{{ replay }} - {{ replay.duration }}</h1>
+			<h1>{{ replay }}</h1>
 		</div>
 	</div>
 	<div class="row full_height">
