--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -122,7 +122,7 @@
 						break;
 				}
 				joustEvents.push({
-					type: "joust_ " + event,
+					type: "joust_" + event,
 					tags: tags,
 					values: values,
 					timestamp: Math.round(Date.now() / 1000)
@@ -157,6 +157,7 @@
 									values.push(key2 + "=" + event.values[key2]);
 								}
 								var line = event.type + (tags.length ? "," + tags.join(",") : "") + " " + values.join(",");
+								return line;
 							}).join("\n")],
 							{
 								type: "text/plain",
