Mark replays with a null name as unsupported
Such replays are most likely extremely broken. Putting a null name
into the database would error, so instead we just gracefully show
an error on the upload page.

--- a/hsreplaynet/templates/uploads/processing.html
+++ b/hsreplaynet/templates/uploads/processing.html
@@ -6,6 +6,9 @@
 <p class="upload-status-message upload-{{ upload.status.name|lower }}">
 {% if upload.is_processing %}
 	Your replay is still processing. Check back soon!
+{% elif upload.status.name == "UNSUPPORTED" %}
+	<strong>This replay is not supported.</strong><br/>
+	<em>{{ upload.error }}</em>
 {% else %}
 	Something went wrong generating this replay. We're on it.
 {% endif %}
