--- a/hsreplaynet/templates/games/my_replays.html
+++ b/hsreplaynet/templates/games/my_replays.html
@@ -25,7 +25,7 @@
 			<div class="hsreplay-details">
 				<dl>
 					<dt>Played</dt>
-					<dd title="{{ replay.global_game.match_start_timestamp }}">{{ replay.global_game.match_start_timestamp|human_time }}</dd>
+					<dd title="{{ replay.global_game.match_start }}">{{ replay.global_game.match_start|human_time }}</dd>
 					<dt>Duration</dt>
 					<dd>{{ replay.global_game.duration|human_duration }}</dd>
 					<dt>Turns</dt>
